# harness

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-29-personal-harness.md  2026-07-03-global-cli-auto-checkpoint.md  2026-07-04-checkpoint-driven-memory.md  2026-07-18-harness-capture-hook-lifecycle.md  2026-07-19-global-release-installer.md
docs/superpowers/specs/: 2026-06-29-personal-harness-design.md  (+2 more)
personal_harness/: __init__.py  aegis.py  codex_agent.py  codex_capture.py  codex_capture_command.py  codex_hooks_migration.py  coevolution.py  core.py  deployment.py  eval.py  evolution.py  execution_controller.py  flow_checkpoint.py  harness_command.py  harness_state.py  install_command.py  install_smoke.py  launcher.py  memory.py  omx_adapter.py  omx_overlay.py  release_builder.py  release_contract.py  replay.py  variants.py
scripts/: build-harness-release  harness  harness-agent  harness-capture-codex  harness-codex  harness-status  smoke-harness-release
tests/: test_aegis.py  test_codex_agent.py  test_codex_capture.py  test_codex_capture_command.py  test_codex_hooks_migration.py  test_coevolution.py  test_core.py  test_deployment.py  test_eval_evolution.py  test_execution_controller.py  test_flow_checkpoint.py  test_harness_command.py  test_harness_state.py  test_install_command.py  test_install_smoke.py  test_launcher.py  test_memory.py  test_omx_adapter.py  test_omx_overlay.py  test_packaging.py  test_release_builder.py  test_release_contract.py  test_replay.py  test_variants.py
