[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-harness"
version = "1.1.0"
description = "Standalone harness-codex runtime and feedback loop tools."
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/Andybobo0825/harness"
Repository = "https://github.com/Andybobo0825/harness"

[project.scripts]
harness = "personal_harness.install_command:main"
harness-codex = "personal_harness.launcher:run_harness_codex"
harness-status = "personal_harness.launcher:status_main"
harness-agent = "personal_harness.harness_command:main"
harness-capture-codex = "personal_harness.codex_capture_command:main"

[tool.setuptools.packages.find]
include = ["personal_harness*"]
